# crawl4ai-pydantic

./: .env.example  .gitignore  README.md  crawl.py  crawler.ts  index.ts  package.json  pyproject.toml  requirements.txt  run_full_crawl.py  run_incremental_crawl.py  wrangler.jsonc
schemas/: policy.json  project.json
scripts/: gen-schemas.js  upload-to-ai-search.js
src/shanghai_policy_crawler/: __init__.py  __main__.py  categories.py  crawl.py  crawl4ai_crawler.py  crawler.py  crawlers.py  export_schema.py  firecrawl_crawler.py  llm_utils.py  models.py  normalize.py  shanghai_gov_api.py  utils.py
src/shanghai_policy_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/shanghai_policy_crawler/scrapy_app/spiders/: zwdt_policy_spider.py
