[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shanghai-policy-crawler"
version = "0.2.0"
description = "Crawler for Shanghai government policy pages (shanghai.gov.cn / zwdt.sh.gov.cn)."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.9.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "openpyxl>=3.1.0",
    "orjson>=3.10.7",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "crawl4ai>=0.9.1",
    "playwright>=1.49.0",
    "patchright>=1.61.2",
    "cnloc>=0.1.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "pytest-asyncio"]

[project.scripts]
crawl = "shanghai_policy_crawler.crawl:main"

[tool.setuptools.packages.find]
where = ["src"]
